add links to contact & events

--- a/event.html
+++ b/event.html
@@ -133,8 +133,8 @@
                             </div>
                             <div class="border border-top-0 rounded-bottom p-4">
                                 <a href="#" class="h4 mb-3 d-block">Open House - Springs Dance</a>
-                                <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
-                                <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Watch Now</a>
+                                <p class="mb-3">Ensaio aberto ao público para o espetáculo "O quebra nozes"</p>
+                                <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="https://www.youtube.com/watch?v=TAVd5lsbonE">Assista</a>
                             </div>
                         </div>
                     </div>
@@ -150,8 +150,8 @@
                             </div>
                             <div class="border rounded-bottom p-4">
                                 <a href="#" class="h4 mb-3 d-block">Open House And Registration</a>
-                                <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
-                                <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Watch Now</a>
+                                <p class="mb-3">Encante-se com o talento e a paixão dos dançarinos em um espetáculo de fim de ano emocionante, apresentando performances de diversos estilos, incluindo hip-hop, street dance, salsa e muito mais, em uma celebração do poder da dança e da expressão artística</p>
+                                <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="https://youtu.be/LbUatYSm8ME?si=ajjmWWKY-5aR-ZwF">Assista</a>
                             </div>
                         </div>
                     </div>
@@ -167,8 +167,8 @@
                             </div>
                             <div class="border rounded-bottom p-4">
                                 <a href="#" class="h4 mb-3 d-block">Open House Morris Dance</a>
-                                <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
-                                <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Watch Now</a>
+                                <p class="mb-3">Entre no mundo da dança contemporânea e do jazz em uma noite cheia de energia e expressão artística, com coreografias dinâmicas e músicas envolventes que cativam o público</p>
+                                <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="https://www.youtube.com/watch?v=HaU6SKW51pY">Assista</a>
                             </div>
                         </div>
                     </div>
@@ -184,8 +184,8 @@
                             </div>
                             <div class="border rounded-bottom p-4">
                                 <a href="#" class="h4 mb-3 d-block">Open House Dance Studio</a>
-                                <p class="mb-3">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni vero excepturi blanditiis quidem</p>
-                                <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="#">Watch Now</a>
+                                <p class="mb-3">Deslumbre-se com a elegância e graça dos alunos da escola de dança em uma noite de performances clássicas de ballet, apresentando coreografias encantadoras e belos figurinos.</p>
+                                <a class="btn btn-primary rounded-pill text-white py-2 px-4" href="https://www.youtube.com/watch?v=PSF7OPuJIGA&t=96s">Assista</a>
                             </div>
                         </div>
                     </div>
