--- a/team.html
+++ b/team.html
@@ -125,8 +125,8 @@
                             </div>
                         </div>
                         <div class="team-content text-center p-4">
-                            <a href="#" class="h4">Emily Ava</a>
-                            <p class="mb-0 text-primary">Instructor</p>
+                            <a href="#" class="h4">Jessica Cavalcanti</a>
+                            <p class="mb-0 text-primary">Balé Clássico</p>
                         </div>
                     </div>
                     <div class="team-item border rounded wow fadeInUp" data-wow-delay="0.3s">
@@ -140,8 +140,8 @@
                             </div>
                         </div>
                         <div class="team-content text-center p-4">
-                            <a href="#" class="h4">Emily Ava</a>
-                            <p class="mb-0 text-primary">Instructor</p>
+                            <a href="#" class="h4">Ingrid Soares</a>
+                            <p class="mb-0 text-primary">Ginástica</p>
                         </div>
                     </div>
                     <div class="team-item border rounded wow fadeInUp" data-wow-delay="0.5s">
@@ -155,8 +155,8 @@
                             </div>
                         </div>
                         <div class="team-content text-center p-4">
-                            <a href="#" class="h4">Emily Ava</a>
-                            <p class="mb-0 text-primary">Instructor</p>
+                            <a href="#" class="h4">Bruno Vieira</a>
+                            <p class="mb-0 text-primary">Street Dance</p>
                         </div>
                     </div>
                     <div class="team-item border rounded wow fadeInUp" data-wow-delay="0.7s">
@@ -170,8 +170,8 @@
                             </div>
                         </div>
                         <div class="team-content text-center p-4">
-                            <a href="#" class="h4">Emily Ava</a>
-                            <p class="mb-0 text-primary">Instructor</p>
+                            <a href="#" class="h4">Natalia Marques</a>
+                            <p class="mb-0 text-primary">Jazz</p>
                         </div>
                     </div>
                     <div class="team-item border rounded wow fadeInUp" data-wow-delay="0.9s">
@@ -185,8 +185,8 @@
                             </div>
                         </div>
                         <div class="team-content text-center p-4">
-                            <a href="#" class="h4">Emily Ava</a>
-                            <p class="mb-0 text-primary">Instructor</p>
+                            <a href="#" class="h4">Suzana Soares</a>
+                            <p class="mb-0 text-primary">Dança Contemporânea</p>
                         </div>
                     </div>
                 </div>
@@ -218,7 +218,7 @@
                             <div class="d-flex align-items-center mb-3">
                                 <a class="btn btn-lg-square btn-primary rounded-circle mx-2" href=""><i class="fas fa-map-marker-alt"></i></a>
                                 <div class="text-white ms-2">
-                                    <p class="mb-0">Av. Dr. Cláudio José Gueiros Leite, 5284 - Pau Amarelo, Paulista - PE</p>
+                                    <p class="mb-0">Av. Dr. Cláudio</p>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center mb-3">
@@ -231,7 +231,7 @@
                             <div class="d-flex align-items-center">
                                 <a class="btn btn-lg-square btn-primary rounded-circle mx-2" href=""><i class="fas fa-envelope"></i></a>
                                 <div class="text-white ms-2">
-                                    <p class="mb-0">justdanceescola@gmail.com</p>
+                                    <p class="mb-0">contatocdh@gmail.com</p>
                                  
                                 </div>
                             </div>
