--- a/testimonial.html
+++ b/testimonial.html
@@ -119,8 +119,8 @@
                             <img class="img-fluid rounded-circle" src="img/testimonial-1.jpg" alt="img">
                         </div>
                         <div class="position-relative" style="margin-top: 140px;">
-                            <h5 class="mb-0">Person Name</h5>
-                            <p>Profession</p>
+                            <h5 class="mb-0">Sophia Albuquerque</h5>
+                            <p>Aluna</p>
                             <div class="d-flex justify-content-center">
                                 <i class="fas fa-star text-secondary"></i>
                                 <i class="fas fa-star text-secondary"></i>
@@ -130,7 +130,7 @@
                             </div>
                         </div>
                         <div class="testimonial-content p-4">
-                            <p class="fs-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitati eiusmod tempor incididunt.
+                            <p class="fs-5 mb-0">Frequentar o JD tem sido uma experiência incrível para mim. As aulas são desafiadoras e inspiradoras, e sinto que estou crescendo como dançarina a cada semana. Mal posso esperar para continuar minha jornada aqui
                             </p>
                         </div>
                     </div>
@@ -139,8 +139,8 @@
                             <img class="img-fluid rounded-circle" src="img/testimonial-2.jpg" alt="img">
                         </div>
                         <div class="position-relative" style="margin-top: 140px;">
-                            <h5 class="mb-0">Person Name</h5>
-                            <p>Profession</p>
+                            <h5 class="mb-0">João Carvalho</h5>
+                            <p>Pai de aluno</p>
                             <div class="d-flex justify-content-center">
                                 <i class="fas fa-star text-secondary"></i>
                                 <i class="fas fa-star text-secondary"></i>
@@ -150,7 +150,27 @@
                             </div>
                         </div>
                         <div class="testimonial-content p-4">
-                            <p class="fs-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitati eiusmod tempor incididunt.
+                            <p class="fs-5 mb-0">O JD superou todas as minhas expectativas. Meu filho adora suas aulas de jazz e está se destacando cada vez mais. É ótimo ver o quanto ele está se desenvolvendo como dançarino e como pessoa.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="testimonial-item border text-center rounded">
+                        <div class="rounded-circle position-absolute" style="width: 100px; height: 100px; top: 25px; left: 50%; transform: translateX(-50%);">
+                            <img class="img-fluid rounded-circle" src="img/testimonial-3.jpg" alt="img">
+                        </div>
+                        <div class="position-relative" style="margin-top: 140px;">
+                            <h5 class="mb-0">Joana Pires</h5>
+                            <p>Avó de aluna</p>
+                            <div class="d-flex justify-content-center">
+                                <i class="fas fa-star text-secondary"></i>
+                                <i class="fas fa-star text-secondary"></i>
+                                <i class="fas fa-star text-secondary"></i>
+                                <i class="fas fa-star text-secondary"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                        </div>
+                        <div class="testimonial-content p-4">
+                            <p class="fs-5 mb-0">O JD é simplesmente maravilhoso! Minha neta ama suas aulas de ballet e sempre volta para casa radiante. Estou muito grata por ela ter a oportunidade de aprender e crescer em um ambiente tão positivo e acolhedor
                             </p>
                         </div>
                     </div>
@@ -170,27 +190,7 @@
                             </div>
                         </div>
                         <div class="testimonial-content p-4">
-                            <p class="fs-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitati eiusmod tempor incididunt.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="testimonial-item border text-center rounded">
-                        <div class="rounded-circle position-absolute" style="width: 100px; height: 100px; top: 25px; left: 50%; transform: translateX(-50%);">
-                            <img class="img-fluid rounded-circle" src="img/testimonial-3.jpg" alt="img">
-                        </div>
-                        <div class="position-relative" style="margin-top: 140px;">
-                            <h5 class="mb-0">Person Name</h5>
-                            <p>Profession</p>
-                            <div class="d-flex justify-content-center">
-                                <i class="fas fa-star text-secondary"></i>
-                                <i class="fas fa-star text-secondary"></i>
-                                <i class="fas fa-star text-secondary"></i>
-                                <i class="fas fa-star text-secondary"></i>
-                                <i class="fas fa-star"></i>
-                            </div>
-                        </div>
-                        <div class="testimonial-content p-4">
-                            <p class="fs-5 mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitati eiusmod tempor incididunt.
+                            <p class="fs-5 mb-0">Estou muito satisfeito com o progresso da minha filha desde que ingressou no CDH. Os professores são extremamente dedicados e capacitados, e o ambiente acolhedor é evidente desde o primeiro dia
                             </p>
                         </div>
                     </div>
