--- a/classes.html
+++ b/classes.html
@@ -6,7 +6,7 @@
         <title>JustDance - Dance Class Website Template</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="keywords">
-        <meta content="" name="description">
+        <meta content="A dance school website" name="description">
         <meta name="theme-color" content="#d63384">
         <link rel="manifest" href="/manifest.json">
 
