add push notification

--- a/contact.html
+++ b/contact.html
@@ -114,6 +114,8 @@
                 <div class="pb-5">
                     <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Contato</h4>
                     <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Fale conosco </h1>
+                    <button type="button" id="btn_permission">Permissão</button>
+
                    
                 
                 </div>
