--- a/contact.html
+++ b/contact.html
@@ -242,8 +242,11 @@
                                 return deg * (Math.PI / 180);
                             }
                         </script>
+                        <p> Caso você decida nos visitar, saiba como está o tempo agora</p>
+                        <iframe src="https://api.wo-cloud.com/content/widget/?geoObjectKey=11674267&language=pt&region=BR&timeFormat=HH:mm&windUnit=kmh&systemOfMeasurement=metric&temperatureUnit=celsius" name="CW2" scrolling="no" width="290" height="318" frameborder="0" style="border: 1px solid #10658E;border-radius: 8px"></iframe>
                     
                     </div>
+                        
                 </div>
             </div>
         </div>
